# AGH-MES

./: CMakeLists.txt  README.md
data/: data.yaml  grid-mix.yaml  grid.yaml
data/C/: data.yaml  grid-test.yaml
data/hbc/: data-test.yaml  data.yaml  grid.yaml
data/hglobal/: data.yaml  grid.yaml
data/hlocal/: data.yaml  grid1.yaml  grid2.yaml
data/pvec/: data-test.yaml  grid.yaml
data/static/: data.yaml  grid.yaml
src/: Core.h  Element.cpp  Element.h  GlobalData.cpp  GlobalData.h  Grid.cpp  Grid.h  Integration.cpp  Integration.h  Point.h  Surface.cpp  Surface.h  main.cpp
src/Gauss/: Elimination.cpp  Elimination.h  Integration.cpp  Integration.h  Quadratures.cpp  Quadratures.h
src/common/: Matrix.cpp  Matrix.h  Numbers.h  Utils.cpp  Utils.h  shapeFunction.h  shapeFunctionDerivatives.h
src/jacobian/: Jacobian.cpp  Jacobian.h
